[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_backend"
path = "src/lib.rs"

[[bin]]
name = "netscan"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
pnet = "0.35.0"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.1"
native-tls = "0.2"
futures = "0.3.31"
colored = "2.0.0"
chrono = "0.4.41"